yamls/dbnoticiasdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbnoticiasdeployment
  namespace: prod
spec:
  template:
    metadata:
      name: dbnoticias
      labels:
        app: dbnoticias
    spec:
      containers:
        - name: dbnoticiascontainer
          image: aluracursos/mysql-db:1
          ports:
            - containerPort: 3306
  selector:
    matchLabels:
      app: dbnoticias
