yamls/portalnoticiasdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portalnoticiasdeployment
  namespace: prod
spec:
  replicas: 3
  template:
    metadata:
      name: portalnoticias
      labels:
        app: portalnoticias
    spec:
      containers:
        - name: portalnoticiascontainer
          image: aluracursos/portal-noticias:1
          ports:
            - containerPort: 80
  selector:
    matchLabels:
      app: portalnoticias
