yamls/svcdbnoticias.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcdbnoticias
  namespace: prod
spec:
  type: ClusterIP
  ports:
    - port: 3306
  selector:
    app: dbnoticias
