yamls/svcportalnoticias.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcportalnoticias
  namespace: prod
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
  selector:
    app: portalnoticias
