yamls/svcsistemanoticias.yaml
apiVersion: v1
kind: Service
metadata:
  name: svcsistemanoticias
  namespace: prod
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30001
  selector:
    app: sistemanoticias
